# tfversion

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Claude.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr.yml
src/tfversion/: cli.py  config.py  fetcher.py  formatter.py  parser.py
tests/: test_cli.py
